move static and html files to appropriate folders

--- a/mainapp/templates/mainapp/templates/index.html
+++ b/mainapp/templates/mainapp/templates/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>maket site</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../../../../static/css/style.css">
 </head>
 
 <body>
     <div class="header">
-            <a href="#"><img class="logo-img" src="img/1280px-Yandex_afisha.png" alt="logo"></a>
+            <a href="#"><img class="logo-img" src="../../../../static/img/1280px-Yandex_afisha.png" alt="logo"></a>
             <form>
                 <p><input type="search" name="q" placeholder="События, артисры и места"> 
-                <img class="search" src="img/search.png" alt="search">
+                <img class="search" src="../../../../static/img/search.png" alt="search">
             </form> 
-            <a class="city" href="#"><img class="marker-img" src="img/mapmarker.png" alt="place">Москва</a> 
+            <a class="city" href="#"><img class="marker-img" src="../../../../static/img/mapmarker.png" alt="place">Москва</a>
             <a class="login" href="#">Войти</a>          
     </div>
     <div class="container">
