--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,20 +1,21 @@
 ﻿<!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <title>maket site</title>
-    <link rel="stylesheet" href="../../../static/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
     <div class="header">
-            <a href="#"><img class="logo-img" src="../../../static/img/1280px-Yandex_afisha.png" alt="logo"></a>
+            <a href="#"><img class="logo-img" src="{%  static 'img/1280px-Yandex_afisha.png' %}" alt="logo"></a>
             <form>
                 <p><input type="search" name="q" placeholder="События, артисры и места"> 
-                <img class="search" src="../../../static/img/search.png" alt="search">
+                <img class="search" src="{%  static 'img/search.png' %}" alt="search">
             </form> 
-            <a class="city" href="#"><img class="marker-img" src="../../../static/img/mapmarker.png" alt="place">Москва</a>
+            <a class="city" href="#"><img class="marker-img" src="{%  static 'img/mapmarker.png' %}" alt="place">Москва</a>
             <a class="login" href="#">Войти</a>          
     </div>
     <div class="container">
