--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>maket site</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 </head>
 
 <body>
@@ -45,8 +47,63 @@
             
         </div>
     </div>
+
     <div class="footer">
-        
+        <div class="container">
+            <div class="footer-wraper page-content">
+                <div class="footer-subscribe">
+                    <p class="footer-subscribe-label">Подпишитесь на акции <br> и анонсы событий</p>
+                    <form class="footer-subscribe-form">
+                        <input type="email" class="subscribe-email" id="email"
+                               placeholder="Электронная почта">
+                        <input class="subscribe-btn" type="submit" value="Далее">
+                    </form>
+                </div>
+                <hr class="footer-side">
+                <div class="footer-main">
+                    <div class="footer-main-block">
+                        <p class="footer-menu-title">Я ИДУ</p>
+                        <ul class="footer-menu">
+                            <li class="footer-menu-item"><a href="#" class="footer-link">О проекте</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Помощь</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Пользовательское соглашение</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Подарочные сертификаты</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Билеты в подарок</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-main-block">
+                        <p class="footer-menu-title">Партнёрам и организаторам</p>
+                        <ul class="footer-menu">
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Инфорпартнёры</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Как стать инфопартнером</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Билетным партнерам</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Организаторам</a></li>
+                            <li class="footer-menu-item"><a href="#" class="footer-link">Корпоративным клиентам</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-main-block">
+                        <div class="footer-socials">
+                            <a href="#" class="social-btn social-fb" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a>
+                            <a href="#" class="social-btn social-vk" target="_blank"><i class="fab fa-vk fa-2x"></i></a>
+                            <p class="footer-block-label">Подписывайтесь на Я ИДУ <br> в социальных сетях</p>
+                        </div>
+                    </div>
+                    <div class="footer-main-block">
+                        <div class="footer-apps">
+                            <a href="#" class="footer-app-link"></a>
+                            <a href="#" class="app-btn"><img src="{%  static 'img/app-store.svg' %}" alt="app-store"></a>
+                            <p class="footer-block-label">Скачайте приложение <br> Я ИДУ</p>
+                        </div>
+                    </div>
+                </div>
+                <hr class="footer-side">
+                <div class="footer-info">
+                    <div class="footer-info-block">
+                        <p class="footer-info-title">&#169; 2019 «Я ИДУ»</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
