Display flex для класса footer-main
Приложение переносилось на новую строчку. Возможно это только у меня. Если у остальных всё норм, нужно обсудить)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -245,6 +245,8 @@ body {
 
 .footer-main {
     padding: 38px 0 33px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .footer-main-block {
