--- a/mainapp/templates/mainapp/includes/inc_event_block.html
+++ b/mainapp/templates/mainapp/includes/inc_event_block.html
@@ -1,4 +1,5 @@
-<div class="event-block">
+{% load static %}
+<div class="event-block" style="background: url({{ avatar }}) no-repeat; background-size: cover;">
 	<div class="event-block-shadow">
 		<div class="description-event">
 			<ul>
