Add link to party maker, change styles

--- a/mainapp/templates/mainapp/includes/inc_event_block.html
+++ b/mainapp/templates/mainapp/includes/inc_event_block.html
@@ -12,11 +12,11 @@
 				<h1>{{ event.name }}</h1>
 			</div>
 			<div class="event-concert-description-quests">{{ event.description }}</div>
-			<div class="event-concert-description-tags">
-					<a  href="#">Концерт в Москве</a>
-					<span>&#8226;</span>
-					<a  href="#">ВТБ Арена парк</a>
-			</div>
+{#			<div class="event-concert-description-tags">#}
+{#					<a  href="#">Концерт в Москве</a>#}
+{#					<span>&#8226;</span>#}
+{#					<a  href="#">ВТБ Арена парк</a>#}
+{#			</div>#}
 		</div>
 	</div>
 </div>
