--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="nearest">
 			<div>
-				<a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
 				<h2>Ленинград</h2>
 				<ul >
 					<li><a href="#">14 июня</a></li>
@@ -35,7 +35,7 @@
 				</ul>
 			</div>
 			<div>
-				<a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
 				<h2>Ленинград</h2>
 				<ul >
 					<li><a href="#">14 июня</a></li>
@@ -43,7 +43,7 @@
 				</ul>
 			</div>
 			<div>
-				<a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
 				<h2>Ленинград</h2>
 				<ul >
 					<li><a href="#">14 июня</a></li>
@@ -59,7 +59,7 @@
 		</div>
 		<div class="nearest">
 			<div>
-				<a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
 				<h2>Ленинград</h2>
 				<ul >
 					<li><a href="#">14 июня</a></li>
@@ -67,7 +67,7 @@
 				</ul>
 			</div>
 			<div>
-				<a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
 				<h2>Ленинград</h2>
 				<ul >
 					<li><a href="#">14 июня</a></li>
@@ -75,7 +75,7 @@
 				</ul>
 			</div>
 			<div>
-				<a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+				<a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
 				<h2>Ленинград</h2>
 				<ul >
 					<li><a href="#">14 июня</a></li>
