fix link on events page

--- a/mainapp/templates/mainapp/events.html
+++ b/mainapp/templates/mainapp/events.html
@@ -14,7 +14,7 @@
     </div>
     <div class="nearest all">
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -22,7 +22,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -30,7 +30,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -38,7 +38,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -46,7 +46,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -54,7 +54,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -62,7 +62,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -70,7 +70,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -78,7 +78,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -86,7 +86,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -94,7 +94,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
@@ -102,7 +102,7 @@
             </ul>
         </div>
         <div class="event-preview">
-            <a href="{% url 'main:product' %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
+            <a href="{% url 'main:product' 290 %}"><img src="{% static 'img/s372x223_lelingrad.webp' %}" alt="bunner1"></a>
             <h2>Ленинград</h2>
             <ul >
                 <li><a href="#">14 июня</a></li>
